k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-python-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-python-api
  template:
    metadata:
      labels:
        app: eks-python-api
    spec:
      containers:
        - name: eks-python-api
          image: 175036779958.dkr.ecr.eu-west-2.amazonaws.com/eks-python-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
